fixed spacing on team page

--- a/style.css
+++ b/style.css
@@ -337,9 +337,15 @@ footer p {
 
 #bios {
     margin-top: 0px;
-    /*gap: var(--viewport-gap2);*/
+    gap: var(--viewport-gap2);
     flex: 1; 
     padding: 0;
+
+    display: flex; /* Use flexbox to align items in a row */
+    align-items: center; /* Center items vertically */
+    flex-wrap: wrap;
+    justify-content: center;
+    
 }
 
 .image-caption {
